--- a/views/home.mustache
+++ b/views/home.mustache
@@ -18,7 +18,8 @@
     <div class="main__container">
         <h2>Home</h2>
 
-        <a href="/register">Click here to register for the exam</a>
+        <a href="/register">Click here to register for the exam</a> <br>
+        <a href="/login">Already Have an account? Login </a>
 
     </div>
 </body>
