--- a/views/pre-exam.mustache
+++ b/views/pre-exam.mustache
@@ -17,7 +17,7 @@
 <body>
     <div class="main__container">
         <h2>Pre-Exam</h2>
-        <h3>Hi {{ complete_name }} &lt;{{ email }}&gt;!</h3>
+        <h3>Hi {{ username }} &lt;{{ email }}&gt;!</h3>
 
         <a href="/exam">Click here to begin the exam</a>
 
