--- a/views/registration-form.mustache
+++ b/views/registration-form.mustache
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css" />
 
     <style>
-        body {padding-top: 50px;}
-        .main__container { width: 100dvw; padding: 0px 500px;}
-        h2 { text-align: center;}
+        body { padding-top: 50px; }
+        .main__container { width: 100%; max-width: 600px; margin: 0 auto; padding: 20px; }
+        h2 { text-align: center; margin-bottom: 20px; }
+        .required { color: red; }
     </style>
-
 </head>
 <body>
     <div class="main__container">
@@ -20,20 +20,39 @@
 
         <form action="/register" method="POST">
             <div>
-                <label for="complete_name">Complete Name <span style="color: red">*</span></label>
-                <input type="text" id="complete_name" name="complete_name" required>
+                <label for="username">Username <span class="required">*</span></label>
+                <input type="text" id="username" name="username" required>
             </div>
-    
+
             <div>
-                <label for="email">Email Address <span style="color: red">*</span></label>
+                <label for="first_name">First Name <span class="required">*</span></label>
+                <input type="text" id="first_name" name="first_name" required>
+            </div>
+
+            <div>
+                <label for="last_name">Last Name <span class="required">*</span></label>
+                <input type="text" id="last_name" name="last_name" required>
+            </div>
+
+            <div>
+                <label for="email">Email Address <span class="required">*</span></label>
                 <input type="email" id="email" name="email" required>
             </div>
-    
+
             <div>
-                <button type="submit">Register</button>
+                <label for="password">Password <span class="required">*</span></label>
+                <input type="password" id="password" name="password" required>
+            </div>
+
+            <div>
+                <label for="password_confirmation">Confirm Password <span class="required">*</span></label>
+                <input type="password" id="password_confirmation" name="password_confirmation" required>
+            </div>
+
+            <div style="margin-top: 20px; text-align: center;">
+                <button type="submit" class="primary">Register</button>
             </div>
         </form>
-
     </div>
 </body>
 </html>
